# djangoPdfChat

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  schema.yml  test_data.sql
api_v1/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
api_v1/migrations/: 0001_initial.py
djangopdfchat/: asgi.py  settings.py  urls.py  wsgi.py
filehandler/: pdf.py
gpt/: gpt.py
tests/: conftest.py  test_document_list_api.py
